// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "resource.grpc.resourceRag";
option java_outer_classname = "ResourceRagProto";
option objc_class_prefix = "RESOURCE";

// 定义包名，避免命名冲突
package resource;

// 定义服务
service ResourceRag {
  rpc llmRagSearch (LlmRagSearchRequest) returns (LlmRagSearchResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message LlmRagSearchRequest {
  string query = 1;
  string resCode = 2;
  string options = 3;
}

message LlmRagSearchResponse {
  repeated Segment segments = 1;
}

message Segment {
  string content = 1;
  string metas = 2;
}